Blackpurl/src/objects/VO_Locked_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Locked_Line_Item_Id__c</fullName>
        <label>Locked Line Item Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Header__c</fullName>
        <label>Vendor Order Header</label>
        <referenceTo>Vendor_Order_Header__c</referenceTo>
        <relationshipLabel>VO Locked Line Items</relationshipLabel>
        <relationshipName>VO_Locked_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>VO Locked Line Item</label>
    <nameField>
        <displayFormat>VOLLI-{000000000}</displayFormat>
        <label>VO Locked Line Items Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VO Locked Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>